# Crouton-Backend-Front

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  DESIGN.md  FEATURES.md  Makefile  PHASES.md  README.md  SYSTEM.md  VISION.md  compose.deploy.yaml  compose.override.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  sqlc.yaml  turbo.json
.agents/: AGENT-GUIDE.md  BACKEND-GUIDE.md  CONTEXT.md  FRONTEND-GUIDE.md  MVP-SPEC.md  PRD-AGENT.md  PRD-BACKEND.md  PRD-FRONTEND.md  PRD-MACHINES.md  PRD.md  PRD_MOBILE.md  README.md  build-feature.md
.agents/skills/: README.md
.claude/commands/: build-feature.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml
.opencode/command/: build-feature.md
apps/agent/: Dockerfile  package.json  pyproject.toml  test_db.py
apps/agent/app/: deps.py  main.py  settings.py
apps/agent/app/agents/: department.py  diagnostic.py  intake.py  llm.py  models.py
apps/agent/app/api/: agents.py  attachments.py  chat.py  copilot.py  diagnostic.py  extract.py  health.py  interview.py
apps/agent/app/data/: workflow_ir.schema.json
apps/agent/app/graph/: __init__.py  chat.py  workflow.py
apps/agent/app/nodes/: copilot.py  extract.py  interview.py  llm.py
apps/agent/tests/: conftest.py  test_agent_llm.py  test_agents.py  test_smoke.py
apps/api/: .air.toml  .dockerignore  .golangci.yml  Dockerfile  go.mod  go.sum  package.json
apps/deck/: OUTLINE.md  README.md
apps/simulator/: Dockerfile  go.mod  go.sum  main.go
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
db/: Dockerfile
deploy/: .env.example  docker-compose.yml  remote-deploy.sh
infra/: 01-setup-project.sh  02-setup-vm.sh  03-setup-wif.sh  README.md  config.sh
scripts/: e2e-smoke.sh  seed_demo.sql
(+346 files in other folders)
