[project]
name = "agent"
version = "0.0.0"
description = "LangGraph-powered AI agent service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langchain-core>=0.3.0",
    "psycopg[binary,pool]>=3.2.3",
    "pgvector>=0.3.6",
    "redis>=5.2.1",
    "anthropic>=0.42.0",
    "openai>=1.58.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "jsonpatch>=1.33",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
    # Local-only AI services. faster-whisper is a Python wrapper over
    # CTranslate2; runs Whisper inference on CPU without a network
    # call. pytesseract is a thin wrapper over the tesseract binary
    # (installed via apt in the Dockerfile).
    "faster-whisper>=1.1.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]  # allow typing.Any where pragmatic

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
